@@ -43,7 +43,7 @@ export("+.section",
        bcdToInteger,
        byteToBinary,
        coastlineBest,
-       colormap, # beta status; added 22 Apr, 2014
+       colormap,
        coordinate,
        coriolis,
        ctdAddColumn,
@@ -102,6 +102,7 @@ export("+.section",
        latlonFormat,
        loggerToc,
        lonlat2utm,
+       lonlat2xy,
        lonFormat,
        longitude,
        "longitude<-",
@@ -290,6 +291,7 @@ export("+.section",
        window.oce,
        write.ctd,
        utm2lonlat,
+       xy2lonlat,
        xyzToEnu,
        xyzToEnuAdp,
        xyzToEnuAdv)
