@@ -152,7 +152,6 @@ mapPlot <- function(longitude, latitude, longitudelim, latitudelim, grid=TRUE,
     if (length(grep("^\\+proj", projection))) {
         if (!is.null(parameters)) warning("'parameters' ignored since projection=\"+proj= ...\"")
         if (!is.null(orientation)) warning("'orientation' ignored since projection=\"+proj= ...\"")
-        message("using proj4 because oceProjection=\"proj4\"")
         ##20140804 known <- c("mercator", "mollweide", "stereographic")
         ##20140804 id <- pmatch(projection, known)
         ##20140804 if (is.na(id))
@@ -1133,3 +1132,113 @@ utm2lonlat <- function(easting, northing, zone=1, hemisphere="N", km=FALSE)
     list(longitude=longitude, latitude=latitude)
 }
 
+lonlat2xy <- function(longitude, latitude, projection="", parameters=NULL, orientation=NULL)
+{
+    if (is.list(longitude)) {
+        latitude <- longitude$latitude
+        longitude <- longitude$longitude
+    }
+    n <- length(longitude)
+    if (n != length(latitude))
+        stop("lengths of longitude and latitude must match but they are ", n, " and ", length(latitude))
+    if ("" == projection) {
+        if (usingProj4()) {
+            proj4 <- .Last.proj4()$proj
+            if (1 > nchar(proj4)) stop("must call mapPlot() first")
+            proj <- project(list(longitude=longitude, latitude=latitude), proj=proj4)
+        } else {
+            mp <- mapproject(longitude, latitude)
+            xy <- list(x=mp$x, y=mp$y)
+        }
+        stop("cannot handle existing projection")
+    } else {
+        usingMapproj <- 0 == length(grep("^\\+proj", projection))
+        if (usingMapproj) {
+            mp <- mapproject(longitude, latitude,
+                             projection=projection,
+                             parameters=parameters, orientation=orientation)
+            xy <- list(x=mp$x, y=mp$y)
+        } else {
+            xy <- project(list(longitude=longitude, latitude=latitude), proj=projection)
+        }
+    }
+    xy
+}
+
+xy2lonlat <- function(x, y, projection="", parameters=NULL, orientation=NULL)
+{
+    if (is.list(x)) {
+        y <- x$y
+        x <- x$x
+    }
+    n <- length(x)
+    if (n != length(y))
+        stop("lengths of x and y must match but they are ", n, " and ", length(y))
+    knownProjection <- FALSE
+    if ("" == projection) {
+        message("FIXME: xy2lonlat() needs to know about existing projection: is that set up OK?")
+        if (0 < nchar(.Last.projection()$projection)) {
+            lp <- .Last.projection()
+            projection <- lp$projection
+            parameters <- lp$parameters
+            orientation <- lp$orientation
+            message("mapproj case")
+        } else if (0 < nchar(.Last.proj4()$proj)) {
+            projection <- .Last.proj4()$proj
+            message("proj4 case")
+        } else {
+            stop("either supply 'projection' or use mapPlot() first")
+        }
+        knownProjection <- TRUE
+    }
+    message("knownProjection: ", knownProjection)
+    usingMapproj <- 0 == length(grep("^\\+proj", projection))
+    if (usingMapproj) {
+        init <- c(0, 0) # FIXME: this will fail if the point is off the map
+        lon <- vector("numeric", n)
+        lat <- vector("numeric", n)
+        tolerance <- 0.001
+        for (i in 1:n) {
+            xy <- c(x[i], y[i])
+            message("i:", i, ", xy[1]:", xy[1], ", xy[2]:", xy[2])
+            try({
+                error <- FALSE
+                ## FIXME: find better way to do the inverse mapping
+                message("init:", init[1], " ", init[2])
+                o <- optim(init,
+                           function(xyTrial) {
+                               ##message("START: xyTrial[1]=", xyTrial[1], ", xyTrial[2]=", xyTrial[2])
+                               if (knownProjection) {
+                                   xyp <- mapproject(xyTrial[1], xyTrial[2])
+                               } else {
+                                   xyp <- mapproject(xyTrial[1], xyTrial[2],
+                                                     projection=projection,
+                                                     parameters=parameters,
+                                                     orientation=orientation)
+                               }
+                               error <<- xyp$error
+                               misfit <- sqrt((xyp$x-xyTrial[1])^2+(xyp$y-xyTrial[2])^2)
+                               message(xyTrial[1], "E ", xyTrial[2], "N misfit=", misfit)
+                               misfit
+                           },
+                           control=list(abstol=tolerance)) #, trace=TRUE))
+                message(sprintf("%.2f %.2f [%.5e]\n", o$par[1], o$par[2], o$value))
+                if (o$convergence == 0 && !error) {
+                    lonlat <- o$par
+                    lon[i] <- lonlat[1]
+                    lat[i] <- lonlat[2]
+                    init[1] <- lon[i]
+                    init[2] <- lat[i]
+                } else {
+                    lon[i] <- NA
+                    lat[i] <- NA
+                }
+            }, silent=TRUE)
+        }
+        lonlat <- list(longitude=lon, latitude=lat)
+    } else {
+        xy <- project(list(x=x, y=y), proj=projection, inverse=TRUE)
+        lonlat <- list(longitude=xy$x, latitude=xy$y)
+    }
+    lonlat
+}
