@@ -7,6 +7,7 @@ easting <- 767700.000
 northing <- 5058000.000
 zone <- 20
 
+## Projections: utm
 lonlat <- utm2lonlat(easting, northing, zone, "N")
 stopifnot(all.equal(lonlat$longitude, longitude, tolerance=1e-5))
 stopifnot(all.equal(lonlat$latitude, latitude, tolerance=1e-5))
@@ -14,4 +15,12 @@ utm <- lonlat2utm(lonlat$longitude, lonlat$latitude)
 stopifnot(all.equal(utm$easting, easting, tolerance=1e-5))
 stopifnot(all.equal(utm$northing, northing, tolerance=1e-5))
 stopifnot(all.equal(utm$zone, zone, tolerance=1e-5))
+
+## Projections: proj4
+## "cs" is near Cape Split, in the Bay of Fundy
+cs <- list(longitude=-64.4966,latitude=45.3346)
+xy <- lonlat2xy(cs$longitude, cs$latitude, "+proj=merc")
+lonlat <- xy2lonlat(xy$x, xy$y, "+proj=merc")
+##stopifnot(all.equal(cs, lonlat, tolerance=1e-15)) # this works on 64-bit
+stopifnot(all.equal(cs, lonlat, tolerance=1e-6))
 
